--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,17 +1,17 @@
 artifacts:
-  artifacts_dit: artifacts
-  trained_model_dir: model
-  base_model_dir: base_model
-  base_model_name: VGG16_base_model.h5
-  updated_base_model_name: updated_VGG16_base_model.h5
-  checkppoint_dir: checkppoints
-  base_log_dir: base_model_dir
-  tensorboard_root_log_dir: tensorboard_log_dir
-  callback_dir: callbacks
+  ARTIFACTS_DIR: artifacts
+  TRAINED_MODEL_DIR: model
+  BASE_MODEL_DIR: base_model
+  BASE_MODEL_NAME: VGG16_base_model.h5
+  UPDATED_BASE_MODEL_NAME: updated_VGG16_base_model.h5
+  CHECKPOINT_DIR: checkpoints
+  BASE_LOG_DIR: base_model_dir
+  TENSORBOARD_ROOT_LOG_DIR: tensorboard_log_dir
+  CALLBACKS_DIR: callbacks
 
 source_download_dirs:
   - ../outside_data/dog
-  -  ../outside_data/cat
+  - ../outside_data/cat
 
 local_data_dirs:
   - data/dog
